--- a/package.json
+++ b/package.json
@@ -1,29 +1,19 @@
 {
-  "name": "request-header-parser-microservice",
-  "version": "0.0.2",
+  "name": "shorturl",
+  "version": "0.0.3",
   "description": "API project for freeCodeCamp",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "cors": "^2.8.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.18.1"
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dns": "^0.2.2",
+    "dotenv": "^8.6.0",
+    "express": "^4.21.2",
+    "url": "^0.11.4",
+    "valid-url": "^1.0.9"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/freeCodeCamp/boilerplate-project-headerparser.git"
-  },
-  "bugs": {
-    "url": "https://github.com/freeCodeCamp/freeCodeCamp/issues"
-  },
-  "homepage": "https://github.com/freeCodeCamp/boilerplate-project-headerparser#readme",
-  "author": "freeCodeCamp <team@freecodecamp.org>",
-  "keywords": [
-    "freeCodeCamp",
-    "node",
-    "express"
-  ],
   "license": "MIT"
 }
