--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "shorturl",
-  "version": "0.0.3",
-  "description": "API project for freeCodeCamp",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dns": "^0.2.2",
-    "dotenv": "^8.6.0",
-    "express": "^4.21.2",
-    "url": "^0.11.4",
-    "valid-url": "^1.0.9"
-  },
-  "license": "MIT"
+	"name": "fcc-exercise-tracker",
+	"version": "0.1.0",
+	"description": "A REST API project, part of Free Code Camp's curriculum",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js"
+	},
+	"dependencies": {
+		"body-parser": "^1.20.3",
+		"cors": "^2.8.5",
+		"dotenv": "^8.6.0",
+		"express": "^4.21.2",
+		"mongoose": "^8.9.4"
+	},
+	"repository": {
+		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
+	},
+	"license": "MIT",
+	"keywords": [
+		"node",
+		"express"
+	]
 }
